# http_event_store

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: api.rs  client.rs  connection.rs  error.rs  event.rs  expected_version.rs  lib.rs  lib.rs.in  macros.rs  types.rs
src/api/: append_to_stream.rs  delete_stream.rs  mod.rs  read_stream_events_forward.rs  to_error.rs
tests/: mod.rs  test_append_to_stream.rs  test_delete_stream.rs  test_hard_delete_stream.rs  test_read_stream_events_forward.rs
tests/support/: assert.rs  mod.rs  task_domain.rs
tests/test_smoke/: mod.rs
